[package]
name = "tokio-tutorial"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
default-run = "tokio-tutorial"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-redis = "0.4.1"
tokio = { version = "1.39.1", features = ["full"] }
bytes = "1"
